<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center"
  android:orientation="vertical" >

      <TextView
          style="@style/SpecialText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/button1"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="41dp"
          android:padding="3dp"
          android:text="@string/SpecialText"
          android:textStyle="bold" />

      <Button
          android:id="@+id/button2"
          android:layout_width="175dp"
          android:layout_height="35dp"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:text="@string/button2"
          android:textColor="#660099"
          android:textSize="15sp" />

      <Button
          android:id="@+id/button1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/button2"
          android:layout_alignParentLeft="true"
          android:layout_marginBottom="16dp"
          android:padding="15dp"
          android:text="@string/button1"
          android:textColor="#660033"
          android:textSize="15sp" />
           
        </RelativeLayout>
         


