<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



             <Button
                 android:id="@+id/Back"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:text="@string/Back"
                 android:textSize="10sp" />

             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="232sp"
                 android:layout_height="232sp"
                 android:layout_above="@+id/Back"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/v" />

             <TextView
                 android:id="@+id/Zag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="17dp"
                 android:text="@string/button2"
                 android:textSize="30sp" />

             <TextView
                 android:id="@+id/tcom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/Zag"
                 android:layout_marginTop="19dp"
                 android:padding="10dp"
                 android:text="@string/tcom"
                 android:textSize="10sp" />
             
        </RelativeLayout>



  